# appgrader

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
src/: main.cpp
src/backend/: display_backend.h
src/backend/linux/: linux_backend.cpp  linux_backend.h
src/backend/windows/: windows_backend.cpp  windows_backend.h
src/config/: preset_manager.cpp  preset_manager.h  settings.cpp  settings.h
src/core/: color_math.c  color_math.h  cube_parser.c  cube_parser.h  icc_writer.c  icc_writer.h  lut3d.c  lut3d.h  spatial_params.c  spatial_params.h
src/kwin_effect/: AppGraderEffect.cpp  AppGraderEffect.h  CMakeLists.txt  metadata.json
src/ui/: EffectSetupDialog.cpp  EffectSetupDialog.h  KWinInstaller.cpp  KWinInstaller.h  MainWindow.cpp  MainWindow.h
src/ui/panels/: BasicPanel.cpp  BasicPanel.h  ColorPanel.cpp  ColorPanel.h  ColorWheelsPanel.cpp  ColorWheelsPanel.h  CurvesPanel.cpp  CurvesPanel.h  EffectsPanel.cpp  EffectsPanel.h  HslPanel.cpp  HslPanel.h  LutPanel.cpp  LutPanel.h
src/ui/widgets/: ColorWheel.cpp  ColorWheel.h  CurveEditor.cpp  CurveEditor.h  LabeledSlider.cpp  LabeledSlider.h
